Correct alignment

--- a/root/static/css/rtl.css
+++ b/root/static/css/rtl.css
@@ -1,5 +1,5 @@
 div.checkbox {
-    margin-right: 40px;
+    margin-right: 20px;
 }
 
 .checkbox input[type="checkbox"] {
